# copilot-ralph-mode

./: .coverage  .coveragerc  .dockerignore  .gitignore  .npmrc  .npmrc.example  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Run_Ralph.md  install.cmd  install.ps1  install.sh  package.json  pyproject.toml  ralph-loop.sh  ralph-mode.cmd  ralph-mode.ps1  ralph-mode.sh  ralph_mode.py  requirements-dev.txt  requirements.txt
.benchmarks/Windows-CPython-3.11-64bit/: 0001_9034294ca295dc829ed54a1c0f8470e50fe0e276_20260203_064302_uncommited-changes.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: agent-creator.agent.md  arbiter.md  code-review.md  critic.md  doer.md  explore.md  plan.md  ralph.md  security.md  task.md
.github/hooks/: post-iteration.sh
.github/instructions/: ralph-mode-python.instructions.md  shell-scripts.instructions.md  task-files.instructions.md  tests.instructions.md
.github/skills/code-analysis/: SKILL.md
.github/skills/ralph-iteration/: SKILL.md
.github/skills/security-scan/: SKILL.md
.github/skills/test-runner/: SKILL.md
.github/workflows/: test.yml
.hypothesis/constants/: 41fa2f1e7562ab86  7426972933575208
.hypothesis/examples/04e6b3400353b141/: 2d454e331d7df072  379389a6d78ecdc5  708e142475070b5f  769f3b27413dc841  a7a87eb9cce6b55a  ba169a87d420b99e  fe326d84ba8f4875
.hypothesis/examples/2d454e331d7df072/: 27b02af45d0be70d  512c3c8403096020  696cb2c0d737a6b7  6b5759fab075e590  b997693be598303b
.hypothesis/examples/379389a6d78ecdc5/: fb75193ccdfae0b4
.hypothesis/examples/769f3b27413dc841/: 38ce4b5cb4f8b5a2  b9dc572668dfd301
.hypothesis/examples/a7a87eb9cce6b55a/: 712850c0c0b46d05  8bd4ed0675d6c41d  fc1885c6d4468fe7
.hypothesis/examples/ba169a87d420b99e/: 0804a7c126d3395d  17762d0ee9afee8b  179903671bb770c9  1a9f00acb7014d41  24ee55dfc5c72763  31af9b1159e3e08e  34551079f2dc7263  350a218d9f474126  35f530c6c19cc586  43b4668507f8c87f  4cf398c310e10f55  5fbb7946e9cd8b99  6a0e6cbfb790f0cd  82a86b590b6c6357  8556d45ee6f5e1bb  a057ec3bac29fb20  a1846d0b1984c124  a4e9bf9dfd11cd4d  ac3fbb923e45c043  b13ed964c3386f18  bb6497cf6db5dfa5  ce5898d697419f20  cf6579f6c66ddfaa  d0425eb2977c0819  d147e7cded725b49  efc10b0332efdc16  f097a1d7bdce1b14  fb3969e131991bcd  ffb83014d164bdf3
.hypothesis/examples/fe326d84ba8f4875/: b985b04ad81e9bc1
.hypothesis/tmp/: tmp10jkvd79  tmp6va6o9k3  tmpaflaz4am  tmpbu8csx4h  tmpd_ylyl4t  tmpfsup9ib5  tmphsl1i57x  tmphw4k59bo  tmpi6gjp_oh  tmpile2lv58  tmpjvoo6581  tmpla_rxl1v  tmpmmy7cyva  tmpnaukcb5p  tmpomjlyjrf  tmpptnn01hi  tmpq6_pr_ma  tmpvba_r7ll  tmpxhv_4afd  tmpzmmcj1a3
.ralph-mode-config/: config.json  mcp-config.json
docs/: EXECUTION_GUIDE.md  LESSONS_LEARNED.md
ralph_mode/: __init__.py  __main__.py  agent_table.py  cli.py  constants.py  context.py  helpers.py  memory.py  scanner.py  state.py  tasks.py  verification.py
tasks/: README.md  add-unit-tests.md  rtl-flex-positioning.md  rtl-margins-padding.md  rtl-text-direction.md
tasks/_groups/: rtl.json  testing.json
tasks/_templates/: standard.md
tests/: conftest.py  demo_network_resilience.ps1  test_advanced.py  test_agent_table.py  test_compliance_standards.py  test_context_manager.py  test_coverage_completion.py  test_cross_platform.py  test_e2e_memory_editing.py  test_e2e_workflows.py  test_enterprise_scenarios.py  test_memory_store.py  test_mutation_coverage.py  test_network_integration.ps1  test_network_resilience.ps1  test_ralph_mode.py  test_ralph_mode_advanced.py  test_ralph_mode_benchmarks.py  test_ralph_mode_cli.py  test_ralph_mode_edge_cases.py  test_ralph_mode_feature_advanced.py  test_ralph_mode_hypothesis.py  test_ralph_mode_integration.py  test_ralph_mode_iteration_deep.py  test_ralph_mode_stress_concurrency.py
