[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-ralph-mode"
version = "1.0.0"
description = "Implementation of the Ralph Wiggum technique for iterative AI development loops with GitHub Copilot CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sepehr Bayat", email = "sepehr@example.com"}
]
maintainers = [
    {name = "Sepehr Bayat", email = "sepehr@example.com"}
]
keywords = [
    "copilot",
    "github-copilot",
    "ralph-wiggum",
    "iterative-development",
    "ai-development",
    "automation",
    "development-loop",
    "cross-platform"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
# NO DEPENDENCIES! Works with Python standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-benchmark>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
ralph-mode = "ralph_mode:main"

[project.urls]
Homepage = "https://github.com/sepehrbayat/copilot-ralph-mode"
Documentation = "https://github.com/sepehrbayat/copilot-ralph-mode#readme"
Repository = "https://github.com/sepehrbayat/copilot-ralph-mode.git"
Issues = "https://github.com/sepehrbayat/copilot-ralph-mode/issues"
Changelog = "https://github.com/sepehrbayat/copilot-ralph-mode/releases"

[tool.setuptools]
py-modules = ["ralph_mode"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 300

[tool.coverage.run]
source = ["ralph_mode"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
