[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-ralph-mode"
version = "1.1.0"
description = "Implementation of the Ralph Wiggum technique for iterative AI development loops with GitHub Copilot CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sepehr Bayat", email = "sepehr@example.com" }]
maintainers = [{ name = "Sepehr Bayat", email = "sepehr@example.com" }]
keywords = [
    "copilot",
    "github-copilot",
    "ralph-wiggum",
    "iterative-development",
    "ai-development",
    "automation",
    "development-loop",
    "cross-platform",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
# NO DEPENDENCIES! Works with Python standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-benchmark>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
ralph-mode = "ralph_mode.cli:main"

[project.urls]
Homepage = "https://github.com/sepehrbayat/copilot-ralph-mode"
Documentation = "https://github.com/sepehrbayat/copilot-ralph-mode#readme"
Repository = "https://github.com/sepehrbayat/copilot-ralph-mode.git"
Issues = "https://github.com/sepehrbayat/copilot-ralph-mode/issues"
Changelog = "https://github.com/sepehrbayat/copilot-ralph-mode/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph_mode*"]

[tool.setuptools.package-data]
ralph_mode = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hypothesis: marks property-based tests using hypothesis",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["ralph_mode"]
branch = true
parallel = true
dynamic_context = "test_function"
omit = ["tests/*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Ralph Mode Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
